Fix splash messages on mobile

--- a/client/src/components/tcg-logo/tcg-logo.module.scss
+++ b/client/src/components/tcg-logo/tcg-logo.module.scss
@@ -29,12 +29,10 @@
 	}
 
 	.splashText {
-		right: 2vw;
-		bottom: 7.5vw;
+		right: -1vw;
+		bottom: 8vw;
 
-		p {
-			font-size: 2.5vw;
-		}
+		font-size: 4vw;
 	}
 }
 
